# deepflow-analyst

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: fetch-chinook.sh
src/deepflow_analyst/: __init__.py  db.py  evaluation.py  llm_client.py  main.py  model_router.py  retrieval.py  settings.py
src/deepflow_analyst/agent/: __init__.py  graph.py  pipeline.py
src/deepflow_analyst/fewshot/: __init__.py  examples.jsonl
tests/: test_evaluation.py  test_graph.py  test_health.py  test_model_router.py  test_pipeline.py  test_retrieval.py
tests/golden/: README.md  golden_dataset.jsonl
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx
